Configuración de cors para aceptar peticiones desde el front movil